--- a/SourceCode/default_config.json
+++ b/SourceCode/default_config.json
@@ -2,5 +2,7 @@
 	"segment_computation_tolerance": 0.05,
     "segment_computation_min_length_in_seconds": 2,
     "slide_clip_desired_format": [1280, 960],
-    "nb_vertical_stripes": 10
+    "nb_vertical_stripes": 10,
+    "audio_mixing_left": 0.8,
+    "audio_mixing_right": 0.2
 }
